src/app/globals.css
@tailwind base;
@tailwind components;
@tailwind utilities;

.iframe-wrapper {
  position: relative;
  padding-bottom: calc(100 / 16 * 9%);
  height: 0;
  overflow: hidden;
  width: 100%;
  height: auto;
}

.iframe-wrapper iframe {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
}

.editable .pill-extension {
  display: inline-flex;
  flex-wrap: wrap;
  background-color: #eff1f4;
  border-radius: 0.75rem;
  padding: 0rem 0.5rem;
}

.editable .autofill-pill {
  background-color: #eff1f4;
  border-radius: 0.75rem;
  padding: 0.125rem 0.5rem;
}

.image-resizer {
  display: inline-flex;
  position: relative;
  flex-grow: 0;
  max-width: calc(100% - 12px);
}
.resize-trigger {
  position: absolute;
  right: -10px;
  opacity: 0;
  transition: opacity 0.3s ease;
  color: #3259a5;
  cursor: col-resize;
  height: 100%;
}
.image-resizer:hover .resize-trigger {
  opacity: 1;
}

.tiptap {
  min-height: 100vh;
  width: 100%;
  max-width: 1000px;
  overflow-x: hidden;
  min-width: 100%;
}

.tiptap p {
  font-size: 14px;
  font-style: normal;
  font-weight: 400;
  line-height: 22px;
}

.tiptap h1 {
  font-size: 30px;
  font-weight: 500;
  font-style: normal;
  margin-top: 32px;
  margin-bottom: 4px;
}

.tiptap h2 {
  font-size: 24px;
  font-weight: 500;
  font-style: normal;
  margin-top: 24px;
  margin-bottom: 1px;
}

.tiptap h3 {
  font-size: 20px;
  font-weight: 500;
  font-style: normal;
  margin-top: 16px;
  margin-bottom: 0px;
}

.tiptap p {
  font-size: 14px;
  font-style: normal;
  font-weight: 400;
  margin-top: 1px;
  margin-bottom: 1px;
}

.tiptap a {
  text-decoration: underline;
  color: blue;
}

.tiptap ul,
.tiptap ol {
  padding: 0 2.5rem;
}

td,
th {
  border: 2px solid #ced4da;
  box-sizing: border-box;
  min-width: 6em;
  position: relative;
}

th {
  background-color: #f1f3f5;
  text-align: left;
  padding: 3px 4px;
}

td {
  padding: 8px 4px;
}

th p {
  font-weight: 600 !important;
}

table {
  border-collapse: collapse;
  overflow: hidden;
  width: 100%;
  table-layout: fixed;
  background-color: #fff;
  margin-top: 4px;
  margin-bottom: 4px;
}

.tableWrapper {
  padding: 1rem 0;
  overflow-x: auto;
}

.resize-cursor {
  cursor: ew-resize;
  cursor: col-resize;
}

.ProseMirror:focus {
  outline: none;
}

.tiptap pre {
  background: #0d0d0d;
  border-radius: 0.5rem;
  color: #fff;
  padding: 0.75rem 1rem;
}

.tiptap code {
  background: none;
  color: inherit;
  font-size: 0.8rem;
  padding: 0;
}

.callout-container {
  background-color: #f8f9fb;
  border: 1px solid #d7d7dd;
  border-radius: 4px;
  position: relative;
  display: flex;
  color: #60606a;
  margin-top: 4px;
  margin-bottom: 4px;
  padding: 3px 0px;
}

.callout-container > .callout-icon {
  align-self: center;
  margin-left: 16px;
}

.callout-container > .label {
  margin-left: 1rem;
  background-color: #0d0d0d;
  font-size: 0.6rem;
  letter-spacing: 1px;
  font-weight: bold;
  text-transform: uppercase;
  color: #60606a;
  position: absolute;
  top: 0;
  padding: 0.25rem 0.75rem;
  border-radius: 0 0 0.5rem 0.5rem;
}

.callout-container > .content {
  margin: 16px;
}

.tiptap p.is-empty::before {
  color: #6b6f76;
  content: attr(data-placeholder);
  float: left;
  height: 0;
  pointer-events: none;
}

